--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -32,6 +32,12 @@
     margin-top: 0;
 }
 
+.footer__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .footer__title {
     color: variables.$green-color;
     font-weight: 300;
